# woice

./: index.html
.github/workflows/: release.yml
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  state.rs
src-tauri/src/app/: recording.rs
src-tauri/src/lib/: db.rs  injection.rs  injection_linux.rs  injection_mac.rs  injection_win.rs  mod.rs  tray.rs
src-tauri/src/process/: groq.rs
src/components/: title-bar.tsx
src/components/ui/: checkbox.tsx
src/features/history/: delete-history-button.tsx  history-details-dialog.tsx  history-page.tsx
src/features/settings/: settings-page.tsx
src/store/config-store/: config-schema.ts
