[package]
name = "woice"
version = "0.0.0"
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
active-win-pos-rs = "0.8"
cpal = "0.15"
rustfft = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
enigo = "0.3"
arboard = "3"
rodio = { version = "0.20", default-features = false, features = [
  "wav",
  "mp3",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }

[target.'cfg(target_os = "windows")'.dependencies]
uiautomation = "0.24.4"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_Controls", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "linux")'.dependencies]
atspi = { version = "0.29.0", default-features = false, features = ["connection", "proxies", "zbus"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
